# glow_engine

./: .clang-format  .gitmodules  CMakeLists.txt
.github/workflows/: ci.yml
docs/: Manual.md
src/editor/: CMakeLists.txt
src/editor/src/: editor_instance.cpp  editor_instance.h  main.cpp
src/engine_lib/: CMakeLists.txt  mem_leak_check.hpp
src/engine_lib/include/: game_instance.h  math_funcs.h  window.h
src/engine_lib/include/geometry/: mesh_generator.h  vertex_pack.h
src/engine_lib/include/io/: filesystem.h  log.h  paths.h
src/engine_lib/include/material/: material.h  texture_filtering.h
src/engine_lib/include/misc/: globals.h  string_funcs.h
src/engine_lib/include/node/: camera_node.h  mesh_node.h  node.h  spatial_node.h
src/engine_lib/include/render/: gpu_resource.h  mesh_renderer.h  render_target.h  renderer.h  swap_chain.h  texture_format.h
src/engine_lib/include/shader/: shader.h  shader_manager.h
src/engine_lib/include/shape/: aabb.h  frustum.h  plane.h
src/engine_lib/include/world/: world.h  world_manager.h
src/engine_lib/src/: game_instance.cpp  window.cpp
src/engine_lib/src/geometry/: mesh_generator.cpp  vertex_pack.cpp
src/engine_lib/src/io/: filesystem.cpp  log.cpp  paths.cpp
src/engine_lib/src/material/: material.cpp
src/engine_lib/src/misc/: globals.cpp  string_funcs.cpp
src/engine_lib/src/node/: camera_node.cpp  mesh_node.cpp  node.cpp  spatial_node.cpp
src/engine_lib/src/render/: dummy_mesh_renderer.h  dummy_renderer.h  gpu_resource.cpp  mesh_renderer.cpp  render_target.cpp  renderer.cpp  swap_chain.cpp
src/engine_lib/src/render/directx/: directx_descriptor_heap.cpp  directx_descriptor_heap.h  directx_mesh_renderer.cpp  directx_mesh_renderer.h  directx_pso_manager.cpp  directx_pso_manager.h  directx_render_target.cpp  directx_render_target.h  directx_renderer.cpp  directx_renderer.h  directx_resource.cpp  directx_resource.h  directx_swap_chain.cpp  directx_swap_chain.h
src/engine_lib/src/shader/: shader.cpp  shader_manager.cpp
src/engine_lib/src/shader/directx/: directx_shader.cpp  directx_shader.h
src/engine_lib/src/shape/: aabb.cpp  frustum.cpp  plane.cpp
src/engine_lib/src/world/: world.cpp  world_manager.cpp
